# CSC64Exam

./: .gitignore  CMakeLists.txt  README.md  projeto.md  prop.md  seq.c
db/: A.txt  B.txt  db.c  ids.txt
src/: main.c  main.cpp  utils.c  utils.cpp  utils.h
